analysis/low-level-api-fir/testData/lazyResolve/errors/danglingAnnotationMemberFunction.kt
annotation class Ann

class C {
    @Ann(
    fun <caret>foo() {}
}